# arff-format-converter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_regression.md
.github/workflows/: benchmarks.yml  test.yml
arff_format_converter/: __init__.py  arff_converter.py  cli.py  config.py  core.py  exceptions.py  logs.py  output.py  texts.py  utils.py  validate.py
scripts/: benchmark_suite.py  generate_test_data.py
tests/: __init__.py  test_converter.py  test_smoke.py
