[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.poetry]
authors = ["Shani Sinojiya <shanisinojiya@gmail.com>"]
description = "A tool to convert ARFF files to different formats."
license = "CC BY-ND 4.0"
name = "arff-format-converter"
readme = "README.md"
requires-python = ">=3.8"
version = "1.1.1"

[tool.poetry.dependencies]
argparse = "^1.4.0"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
scipy = "^1.13.0"

[tool.poetry.scripts]
arff-format-converter = "arff_format_converter.arff_converter:main"

[tool.poetry.urls]
Homepage = "https://github.com/Shani-Sinojiya/arff-format-converter"
Issues = "https://github.com/Shani-Sinojiya/arff-format-converter/issues"
Repository = "https://github.com/Shani-Sinojiya/arff-format-converter.git"
